--- a/main.html
+++ b/main.html
@@ -10,6 +10,28 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<label for="name">Name</label>
+		<input id="name" type="text" maxlength="50" minlength="3" >
+
+		<br>
+		<br>
+
+		<label for="portfolio"> Portfolio </label>
+		<input id="portfolio" type="url" required>
+
+		<br>
+		<br>
+
+		<label for="favColor"> Favorite Color</label>
+		<input id="favColor" type="color">
+
+		<br>
+		<br>
+		
+		<label for="likeness"> Likeness</label>
+		<input id="likeness" type="range" min="1" max="100">
+	</form>
 
 </body>
 
