--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form>
+	<h1>Feedback Form</h1>
+	<form method="post" action="">
 		<label for="name">Name</label>
 		<input id="name" type="text" maxlength="50" minlength="3" >
 
